--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "sass-loader": "^8.0.0",
         "vue": "^2.6.11",
         "vue-router": "^3.3.4",
-        "vue-template-compiler": "^2.6.11"
+        "vue-template-compiler": "^2.6.11",
+        "vuex": "^3.4.0"
     }
 }
